--- a/builds/sglearn-prod.plist
+++ b/builds/sglearn-prod.plist
@@ -23,7 +23,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>SG Learn</string>
+				<string>IRIS</string>
 			</dict>
 		</dict>
 	</array>
